[package]
name = "deathframe"
version = "0.5.1"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
description = "My game development framework for the amethyst game engine"
license = "MIT"
repository = "https://github.com/Noah2610/deathframe"

[workspace]
members = [
    "deathframe_core",
    "deathframe_physics",
    "deathframe_animation",
]

[dependencies.core]
package = "deathframe_core"
path = "./deathframe_core"

[dependencies.physics]
package = "deathframe_physics"
path = "./deathframe_physics"
optional = true

[dependencies.animation]
package = "deathframe_animation"
path = "./deathframe_animation"
optional = true

[features]
default = ["physics", "animation"]

vulkan = ["core/vulkan"]
metal  = ["core/metal"]
empty  = ["core/empty"]

serde   = ["core/serde"]
nightly = ["core/nightly"]
