[package]
name = "deathframe"
version = "0.6.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
description = "Game development framework for the amethyst game engine"
license = "MIT"
repository = "https://github.com/Noah2610/deathframe"
categories = ["game-development"]

[workspace]
members = [
    "deathframe_core",
    "deathframe_physics",
    "deathframe_animation",
    "deathframe_audio",
]

[dependencies.core]
package = "deathframe_core"
version = "0.1.0"
path = "deathframe_core"

[dependencies.physics]
package = "deathframe_physics"
version = "0.1.0"
path = "deathframe_physics"
optional = true

[dependencies.animation]
package = "deathframe_animation"
version = "0.1.0"
path = "deathframe_animation"
optional = true

[dependencies.audio]
package = "deathframe_audio"
version = "0.1.0"
path = "deathframe_audio"
optional = true

[features]
default = ["physics", "animation", "audio"]

vulkan = ["core/vulkan"]
metal  = ["core/metal"]
empty  = ["core/empty"]

debug = ["core/debug", "physics/debug", "animation/debug"]
