[package]
name = "deathframe_animation"
version = "0.0.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
description = "Deathframe crate for frame-by-frame sprite animations"
license = "MIT"

[dependencies.core]
package = "deathframe_core"
path = "../deathframe_core"

[dependencies.climer]
version = "0.5.0"

[dependencies.specs]
version = "0.15.1"

[dependencies.specs-derive]
version = "0.4.0"

[dependencies.derive_builder]
version = "0.9.0"
