[package]
name = "deathframe_animation"
version = "0.0.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
description = "Deathframe crate for frame-by-frame sprite animations"
license = "MIT"

[dependencies.core]
package = "deathframe_core"
path = "../deathframe_core"

[dependencies.climer]
version = "0.6.0"
default-features = false
features = ["serialize"]

[dependencies.derive_builder]
version = "0.9.0"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[features]
debug = []
