[package]
name = "deathframe_audio"
version = "0.0.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
description = "Deathframe crate for SFX and BGM"
license = "MIT"

[dependencies.core]
package = "deathframe_core"
path = "../deathframe_core"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]
optional = true

[dependencies.derive_builder]
version = "0.9.0"

[features]
default = []

debug       = []
deserialize = ["serde"]
