[package]
name = "deathframe_core"
version = "0.5.1"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
description = "My game development framework for the amethyst game engine"
license = "MIT"
repository = "https://github.com/Noah2610/deathframe"

[dependencies.amethyst]
version = "0.14.0"
default-features = false
features = ["animation", "audio", "renderer"]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]
optional = true

[dependencies.derive_builder]
version = "0.9.0"

[features]
default = []

vulkan = ["amethyst/vulkan"]
metal  = ["amethyst/metal"]
empty  = ["amethyst/empty"]

nightly     = ["amethyst/nightly"]
debug       = []
deserialize = ["serde"]
