[package]
name = "deathframe_core"
version = "0.1.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
description = "Deathframe core crate"
license = "MIT"
repository = "https://github.com/Noah2610/deathframe"

[dependencies.amethyst]
version = "0.15.3"
git = "https://github.com/Noah2610/amethyst"
branch = "gl-hack"
default-features = false
features = ["animation", "audio", "renderer"]

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.derive_builder]
version = "0.9.0"

[features]
default = []

gl     = ["amethyst/gl"]
vulkan = ["amethyst/vulkan"]
metal  = ["amethyst/metal"]
empty  = ["amethyst/empty"]

texture_scaling = []

debug = []
