[package]
name = "deathframe_physics"
version = "0.0.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
description = "Deathframe crate for handling collision"
license = "MIT"

[dependencies.core]
package = "deathframe_core"
path = "../deathframe_core"

[dependencies.specs]
version = "0.15.1"

[dependencies.specs-derive]
version = "0.4.0"

[dependencies.derive_builder]
version = "0.9.0"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]
optional = true
