[package]
name = "deathframe_physics"
version = "0.1.0"
authors = ["Noah Rosenzweig <rosenzweig.noah@gmail.com>"]
edition = "2018"
description = "Deathframe crate for handling collision and other physics stuff"
license = "MIT"

[dependencies.core]
package = "deathframe_core"
version = "0.1.0"
path = "../deathframe_core"

[dependencies.derive_builder]
version = "0.9.0"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[features]
debug = []
